fix: no more banner overlapping

--- a/containers/PageProjectDetails/components/Backdrop/index.module.scss
+++ b/containers/PageProjectDetails/components/Backdrop/index.module.scss
@@ -1,7 +1,8 @@
 .container {
   min-width: 100px;
-  margin-top: 80px;
   height: 510px;
+  border-radius: 16px;
+  overflow: hidden;
   // background-image generated from https://pattern.monster/zebra/
   background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='120' height='20' patternTransform='scale(1) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(0, 0%, 100%, 1)'/><path d='M-50.129 12.685C-33.346 12.358-16.786 4.918 0 5c16.787.082 43.213 10 60 10s43.213-9.918 60-10c16.786-.082 33.346 7.358 50.129 7.685'  stroke-width='1' stroke='hsla(235, 19%, 87%, 1)' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
 }
